fix: update visible game structure

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 * {
   box-sizing: border-box;
-}
-
-.game-board {
-  text-align: center;
+  font-family: monospace;
+  text-transform: uppercase;
 }
 
 .wrapper {
@@ -12,21 +10,43 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: fit-content;
+  width: 100%;
   color: #fff;
-  margin: auto;
 }
 
-.select__container {
+.game-board {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+
+  @media screen and (max-width: 768px) {
+    grid-column: 3 / 2;
+    order: 2;
+  }
+  @media screen and (max-width: 420px) {
+    order: 0;
+    grid-column: 1 / 13;
+  }
+}
+
+.game-instructions {
+  @media screen and (max-width: 768px) {
+    grid-column: 1 / 2;
+  }
+
+  @media screen and (max-width: 420px) {
+    grid-column: 1 / 13;
+  }
+}
+
+.game-board,
+.game-instructions {
+  text-align: center;
 }
 
 .board-header {
   width: 100%;
-  min-width: 250px;
+  min-width: 365px;
 }
 
 .board-header__container {
@@ -41,14 +61,12 @@
 }
 
 .game__container {
-  display: flex;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
   gap: 20px;
-}
 
-@media screen and (max-width: 420px) {
-  .game__container {
-    flex-direction: column;
-    align-items: center;
+  @media screen and (max-width: 768px) {
+    grid-template-columns: unset;
   }
 }
