--- a/src/components/BoardSizeSelector/index.css
+++ b/src/components/BoardSizeSelector/index.css
@@ -1,3 +1,10 @@
 .select__label {
   margin-bottom: 10px;
 }
+
+.select__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
