--- a/src/components/GameHistory/index.css
+++ b/src/components/GameHistory/index.css
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media screen and (max-width: 768px) {
+    grid-column: 1 / 2;
+  }
+
+  @media screen and (max-width: 420px) {
+    grid-column: 1 / 13;
+  }
 }
 
 .game-history__container {
